# URP

./: CLAUDE_READY_INDEX.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: CHANGELOG_URX.md  KDMAPPER_INTEGRATION.md  URP_100核调度测试报告.md  URP_URX_技术白皮书.md  URP_吞吐量下降原因分析.md  URP_性能优化修改步骤.md  URP_调度器优化效果报告.md  URP_调度能力说明.md  URX_Claude_开发者接手说明.md  URX_Runtime_ZeroCopy_Design.md  URX_v0_2_Technical_Definition.md  URX_v0_3_Technical_Definition.md  URX_材料说明稿.md  指令集扩展规划.md  系统能力概述.md
firmware/urp-pico/: CMakeLists.txt
firmware/urp-pico/src/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
kdmapper_cpp/: CMakeLists.txt  kdmapper_wrapper.cpp  kdmapper_wrapper.hpp  kdmapper_wrapper.vcxproj
src/: cost.rs  et_cooling.rs  executor.rs  gpu_executor.rs  ir.rs  jit_compiler.rs  kdmapper_ffi.rs  lib.rs  main.rs  node.rs  onnx_executor.rs  optimizer.rs  packet.rs  packet_test.rs  partition.rs  policy.rs  reducer.rs  remote.rs  reservation.rs  ring.rs  runtime.rs  runtime_test.rs  scheduler.rs  shared_memory.rs  usb_executor.rs
tests/: bench_test.rs  executor_test.rs  gpu_schedule_test.rs  gpu_test.rs  integration_test.rs  jit_integration_test.rs  json_schema_test.rs  kdmapper_test.rs  opcode_batch34_test.rs  opcode_f64_test.rs  opcode_test.rs  scheduling_test.rs  usb_protocol_test.rs
