[package]
name = "urx-runtime-v08"
version = "0.1.0"
edition = "2021"
description = "URX runtime v0.8 with scheduler policy trait, topology cost, reservation/backfill skeleton"
license = "MIT"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
zerocopy = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
kdmapper = []

[dev-dependencies]
tokio-test = "0.4"
